--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -128,3 +128,25 @@
     height: 3px; /* Grosor de la línea */
     background-color: #00939D;
 }
+
+/* Estilo para el contador de notificaciones */
+.notificaciones {
+    position: relative;
+    margin-left: auto; /* Empuja el botón hacia la derecha */
+}
+
+.notificaciones-boton {
+    background-color: #00939D;
+    color: white;
+    border: none;
+    padding: 8px 15px;
+    border-radius: 5px;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.notificaciones-boton:hover {
+    background-color: #8AB545;
+}
