--- a/src/registrarMultas.css
+++ b/src/registrarMultas.css
@@ -127,6 +127,14 @@
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.modal-overlay.show {
+    opacity: 1;
+    visibility: visible;
 }
 
 .modal {
@@ -138,38 +146,22 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
     position: relative;
-}
-
-/* Botón de cerrar */
-.modal-close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    font-size: 18px;
-    cursor: pointer;
-}
-
-.modal-overlay.show {
-    opacity: 1;
-    visibility: visible;
-}
-
-.modal-content {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: 90%;
-    max-width: 400px;
-    text-align: center;
     transform: scale(0.8);
     transition: transform 0.3s ease;
 }
 
-.modal-overlay.show .modal-content {
+.modal.show {
     transform: scale(1);
+}
+
+/* Botón de cerrar */
+.modal-close {
+    background: none;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: 20px;
+    background-color: #8AB545;
 }
 
 /* Botones del modal */
@@ -203,4 +195,11 @@
 
 .modal-button.cancel:hover {
     background-color: #bbb;
+}
+
+.modal-content p{
+    font-size: 25px;
+    color: #7a9e3d;
+    margin-bottom: 20px;
+    text-shadow: none;
 }
